--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+/node_modules
 
 # misc
 .DS_Store
@@ -21,6 +22,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-node_modules
-node_modules
 yarn.lock
